samples/_failures_safe/1761045195_9b1ad8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_30f2b450.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_30f2b450.c:181:13: error: expected declaration or statement at end of input
  181 |             printf("Vertex %d: %d\n", i, dist[i]);
      |             ^~~~~~
./samples/SAFE/__tmp_30f2b450.c:181:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_30f2b450.c:181:13: error: expected declaration or statement at end of input
